RESOLVED FIXED90787
[GTK] Memory leak in webkitwebnavigationaction.cpp
https://bugs.webkit.org/show_bug.cgi?id=90787
Summary [GTK] Memory leak in webkitwebnavigationaction.cpp
Sudarsana Nagineni (babu)
Reported 2012-07-09 06:45:30 PDT
Memory leak found in webkitwebnavigationaction.cpp ==6946== 7 bytes in 1 blocks are definitely lost in loss record 715 of 55,380 ==6946== at 0x4C2B6CD: malloc (in /usr/lib/valgrind/vgpreload_memcheck-amd64-linux.so) ==6946== by 0xB963A38: g_malloc (gmem.c:159) ==6946== by 0xB97829D: g_strdup (gstrfuncs.c:356) ==6946== by 0x62E33B3: webkit_web_navigation_action_set_target_frame(_WebKitWebNavigationAction*, char const*) (webkitwebnavigationaction.cpp:358) ==6946== by 0x62E2AAF: webkit_web_navigation_action_set_property(_GObject*, unsigned int, _GValue const*, _GParamSpec*) (webkitwebnavigationaction.cpp:107) ==6946== by 0xB6DC22D: g_object_constructor (gobject.c:1352) ==6946== by 0xB6DD6E3: g_object_newv (gobject.c:1713) ==6946== by 0xB6DDEC5: g_object_new_valist (gobject.c:1830) ==6946== by 0xB6DE1D3: g_object_new (gobject.c:1545) ==6946== by 0x62B48E2: WebKit::getNavigationAction(WebCore::NavigationAction const&, char const*) (FrameLoaderClientGtk.cpp:389) ==6946== by 0x62B4B08: WebKit::FrameLoaderClient::dispatchDecidePolicyForNewWindowAction(void (WebCore::PolicyChecker::*)(WebCore::PolicyAction), WebCore::NavigationAction const&, WebCore::ResourceRequest const&, WTF::PassRefPtr<WebCore::FormState>, WTF::String const&) (FrameLoaderClientGtk.cpp:417) ==6946== by 0x6AC4E5B: WebCore::PolicyChecker::checkNewWindowPolicy(WebCore::NavigationAction const&, void (*)(void*, WebCore::ResourceRequest const&, WTF::PassRefPtr<WebCore::FormState>, WTF::String const&, WebCore::NavigationAction const&, bool), WebCore::ResourceRequest const&, WTF::PassRefPtr<WebCore::FormState>, WTF::String const&, void*) (PolicyChecker.cpp:101) ==6946== by 0x6A87CE7: WebCore::FrameLoader::loadURL(WebCore::KURL const&, WTF::String const&, WTF::String const&, bool, WebCore::FrameLoadType, WTF::PassRefPtr<WebCore::Event>, WTF::PassRefPtr<WebCore::FormState>) (FrameLoader.cpp:1183) ==6946== by 0x6A87775: WebCore::FrameLoader::loadFrameRequest(WebCore::FrameLoadRequest const&, bool, bool, WTF::PassRefPtr<WebCore::Event>, WTF::PassRefPtr<WebCore::FormState>, WebCore::ShouldSendReferrer) (FrameLoader.cpp:1134) ==6946== by 0x6A83E45: WebCore::FrameLoader::urlSelected(WebCore::FrameLoadRequest const&, WTF::PassRefPtr<WebCore::Event>, bool, bool, WebCore::ShouldSendReferrer, WebCore::ShouldReplaceDocumentIfJavaScriptURL) (FrameLoader.cpp:282) ==6946== by 0x6A83B93: WebCore::FrameLoader::urlSelected(WebCore::KURL const&, WTF::String const&, WTF::PassRefPtr<WebCore::Event>, bool, bool, WebCore::ShouldSendReferrer) (FrameLoader.cpp:258) ==6946== by 0x684C1A3: WebCore::HTMLAnchorElement::handleClick(WebCore::Event*) (HTMLAnchorElement.cpp:525) ==6946== by 0x684A7AE: WebCore::HTMLAnchorElement::defaultEventHandler(WebCore::Event*) (HTMLAnchorElement.cpp:159)
Attachments
Patch (1.32 KB, patch)
2012-07-09 07:00 PDT, Sudarsana Nagineni (babu)
no flags
Sudarsana Nagineni (babu)
Comment 1 2012-07-09 07:00:23 PDT
WebKit Review Bot
Comment 2 2012-07-09 09:33:00 PDT
Comment on attachment 151247 [details] Patch Clearing flags on attachment: 151247 Committed r122111: <http://trac.webkit.org/changeset/122111>
WebKit Review Bot
Comment 3 2012-07-09 09:33:04 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.