[GTK] Memory leak in webkitwebnavigationaction.cpp https://bugs.webkit.org/show_bug.cgi?id=90787

Patch by Sudarsana Nagineni <sudarsana.nagineni@linux.intel.com> on 2012-07-09
Reviewed by Martin Robinson.

Fixed a memory leak in WebKitWebNavigationAction.

* webkit/webkitwebnavigationaction.cpp:
(webkit_web_navigation_action_finalize): Free the g_strdup()'d string.

Canonical link: https://commits.webkit.org/108623@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@122111 268f45cc-cd09-0410-ab3c-d52691b4dbfc